Archive2/26/1d1d2e5414a8c9/output
main.cpp: In function 'int main()':
main.cpp:10:7: error: use of deleted function 'T::T()'
     T t;
       ^
main.cpp:3:7: note: 'T::T()' is implicitly deleted because the default definition would be ill-formed:
 union T{
       ^
main.cpp:5:36: error: union member 'T::a' with non-trivial 'T::A::A()'
     struct A{ int i; A():i{1} {} } a;
                                    ^
